<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">紫金渔府</string>

    <!-- common -->
    <string name="back">返回</string>
    <string name="yuan">元</string>
    <string name="yuan_sign">￥</string>
    <string name="prompt">温馨提示：</string>
    <string name="continue_download">上次更新没有完成，已下载%d%%，是否继续？</string>
    <string name="downloaded">已经下载%d%%</string>
    <string name="click_install">%s下载完成！点击安装！</string>
    <string name="download_fialed">下载失败！</string>
    <string name="find_new_version">发现新版本%s</string>
    <string name="update_right_now">立即升级</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="dilog_title">楚霸王在上！</string>
    <string name="no_dish_warn">您还没有点餐，要不要先去洗劫一番。</string>
    <string name="dialog_go">去洗劫</string>
    <string name="dialog_come">来上恭</string>

    <string name="go_dish">请点击右上角的点餐车点菜哦，亲！</string>
    <!-- home -->
    <string name="home_specialty">招牌美食</string>
    <string name="home_today">今天价：</string>

    <!-- personal -->
    <string name="personal_book">我的预约</string>
    <string name="personal_order">我的点餐</string>
    <string name="personal_address">地址管理</string>
    <string name="personal_share">分享渔府</string>
    <string name="personal_feedback">意见反馈</string>
    <string name="personal_about">关于我们</string>
    <string name="personal_update">检查更新</string>
    <string name="type">类型：</string>

    <string-array name="book_bypes">
        <item name="to_rest_consume">到店消费</item>
        <item name="to_rest_get">到店取菜</item>
        <item name="sent_home">外送到家</item>
    </string-array>

    <string name="feedback_success">已收到您的宝贵意见，我们将会尽快改善.</string>
    <string name="custome_num">就餐人数：</string>
    <string name="time">时间：</string>
    <string name="book_pre">未到期预约</string>
    <string name="book_ed">已过期预约</string>
    <string name="about_us_row1">人均： ￥</string>
    <string name="about_us_row2">营业时间：</string>
    <string name="about_us_row3">地址： </string>
    <string name="about_us_row4">电话： </string>
    <string name="add_address">新增地址</string>
    <string name="add_name">请输入联系人姓名</string>
    <string name="add_phone">请输入正确的手机号</string>
    <string name="add_addr">请输入详细地址</string>
    <string name="add_name_warning">请将姓名填写完整</string>
    <string name="name_length_warning">请将姓名填写完整</string>
    <string name="add_addr_warning">地址不能为空</string>
    <string name="modify_addr">修改地址</string>
    <string name="constant_name">联系人姓名</string>
    <string name="constant_phone">联系电话</string>
    <string name="constant_addr">详细地址</string>
    <string name="feedback_hint">请输入您对我们的宝贵意见！</string>
    <string name="share_subject">分享主题</string>
    <string name="share_content">紫金渔府:%s</string>
    <string name="logout">退出登录</string>
    <string name="login_sign">使用一下账号登录</string>
    <string name="recommend_dish">菜品推荐</string>
    <string name="privilage">优惠活动</string>
    <string name="menu_title">飘香菜单</string>
    <string name="mien_title">渔府风采</string>
    <string name="shopping_cart">点餐车</string>
    <string name="book">预约</string>

    <string-array name="book_tab">
        <item name="book_tab">亲临渔府</item>
        <item name="to_rest_get">外带取餐</item>
        <item name="sent_home">外卖服务</item>
    </string-array>

    <string name="book_constant">联系人</string>
    <string name="book_phone">联系电话</string>
    <string name="book_go_time">就餐时间</string>
    <string name="book_time">取餐时间</string>
    <string name="book_other">其他就餐要求(选填)</string>
    <string name="book_detail_other">其他要求：</string>
    <string name="book_number">就餐人数</string>
    <string name="submit_book">提交预约</string>
    <string name="comfirm_book">确认预约</string>
    <string name="book_detail">订单详情</string>
    <string name="book_seled">已选菜品</string>
    <string name="book_money">订单金额：</string>
    <string name="book_contact">联系人：</string>
    <string name="book_detail_num">就餐人数：</string>
    <string name="book_detail_phone">联系电话：</string>
    <string name="book_detail_time">就餐时间：</string>
    <string name="send_time">送达时间</string>
    <string name="send_time_">送达时间：</string>
    <string name="book_detail_prompt">温馨提示：为了您的方便请在预定时间到达就餐，若超过10分钟未到达，我们将另行安排。</string>
    <string name="submit_order">提交订单</string>
    <string name="menu_detail">菜品详情</string>
    <string name="menu_item_price_per">/例</string>
    <string name="select_all">全选</string>
    <string name="next">下一步</string>
    <string name="cart_total">合计：</string>
    <string name="cart_part">份</string>
    <string name="consumer_warning">没有人吃饭哦！</string>
    <string name="book_time_warning">请填写完信息，亲！</string>
    <string name="select_time">请选择时间：</string>
    <string name="modify_erro">修改失败</string>
    <string name="modify_ok">修改成功</string>
    <string name="book_addr_warning">地址不能为空</string>
    <string name="update_erro">版本更新失败</string>
    <string name="update_no">当前版本已是最新版本</string>
    <string name="get_local_erro">获取地址失败</string>
    <string name="activity_detail">活动详情</string>
    <string name="home_http">http://</string>
    <string name="before_now_warn">所选时间已过期</string>
    <string name="dialog_promot">渔府提示：</string>
    <string name="get_dish_time">取餐时间：</string>
    <string name="send_addr">送达地址：</string>
    <string name="share_addr">http://fish.ebingoo.com/</string>
    <string name="delete_addr_confirm">亲，你确定要删除这条地址信息吗?</string>
    <string name="order_tiwce">您的提交信息与上条雷同，请修改后进行提交!</string>
    <string name="order_ok">提交</string>
    <string name="order_cancel">取消</string>
    <string name="feedback_warn">请输入您对我们的宝贵意见！</string>
    <string name="order_warn">你还没有选择下单的菜品哦，亲！</string>
    <string name="exit_warn">再次点击退出</string>
    <string name="load_again">数据加载失败，点击再次加载</string>
</resources>
