<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/bg_gray"
    android:layout_height="match_parent">


    <LinearLayout
        style="@style/common_marg_white_item"
        android:orientation="vertical">

        <EditText
            android:id="@+id/add__addr_name_et"
            style="@style/addr_manager_item"
            android:hint="@string/add_name" />

        <LinearLayout style="@style/gray_divide_line_style"></LinearLayout>

        <EditText
            android:id="@+id/add_addr_phone_et"
            android:inputType="phone"
            style="@style/addr_manager_item"
            android:hint="@string/add_phone" />

        <LinearLayout style="@style/gray_divide_line_style"></LinearLayout>

        <EditText
            android:id="@+id/add_addr_et"
            style="@style/addr_manager_item"
            android:hint="@string/add_addr" />

    </LinearLayout>

</RelativeLayout>
