<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    style="@style/cmmon_pad_2_white_item">

    <com.jch.lib.view.CircleImageView
        app:roundHeight="@dimen/img_round_coner"
        app:roundWidth="@dimen/img_round_coner"
        style="@style/my_book_item_img_style"
        android:id="@+id/mybook_item_img" />

    <LinearLayout
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/type"
                style="@style/font_gray2_14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mybook_type_tv"
                android:layout_width="wrap_content"
                style="@style/font_gray2_14"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/custome_num_ll"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/font_gray2_14"
                android:layout_width="wrap_content"
                android:text="@string/custome_num"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/font_gray2_14"
                android:id="@+id/custome_num_tv"
                android:text="5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                style="@style/font_gray2_14"
                android:layout_width="wrap_content"
                android:text="@string/time"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/mybook_time_tv"
                style="@style/font_gray2_14"
                android:text="2015.02.13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>